# Tk-Nonogram

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yaml
src/: main.py
src/tk_nonogram/: __init__.py  entities.py  utils.py
src/tk_nonogram/core/: utils.py
src/tk_nonogram/interface/: utils.py
src/tk_nonogram/utils/: __init__.py
