[project]
name = "tk-nonogram"
version = "0.2.1"
description = "Default template for PDM package"
authors = [
    { name = "是蓝兔哟～", email = "49941141+Dragon1573@users.noreply.github.com" },
]
dependencies = [
    "numpy>=1.26.4",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = { text = "AGPL-3.0" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.13.2",
    "black>=24.4.0",
    "flake8>=7.0.0",
    "flake8-bugbear>=24.2.6",
    "mypy>=1.9.0",
    "pyinstaller>=6.6.0",
    "pre-commit>=3.7.0",
]

[tool.pdm.scripts]
isort.cmd = "python -m isort -v --profile=black ./src/"
isort.help = "Sort all imports in the source code."
black.cmd = "python -m black -v --line-length=120 ./src/"
black.help = "Reformat the source code."
flake8.cmd = "python -m flake8 -v ./src/"
flake8.help = "Lint the source code."
mypy.cmd = "python -m mypy ./src/"
mypy.help = "Scan source code with a static type checker."
ci.composite = ["isort", "black", "flake8", "mypy"]
ci.help = "Run a full CI of the project."
play.cmd = "python src/main.py"
play.help = "Launch the main application."
build.cmd = "pyinstaller --disable-windowed-traceback -y --clean -F -n {args} -w -i ./src/output.ico ./src/main.py"
build.help = "Build a single-file executable of the project."
git.cmd = "pre-commit install"
git.help = "Install pre-commit hooks into Git repository."
