[project]
name = "tk-nonogram"
version = "0.3.0"
description = "Default template for PDM package"
authors = [
    { name = "是蓝兔哟～", email = "49941141+Dragon1573@users.noreply.github.com" },
]
dependencies = ["numpy>=1.26.4"]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = { text = "AGPL-3.0" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.9.0",
    "pyinstaller>=6.6.0",
    "pre-commit>=3.7.0",
    "Pillow>=10.3.0",
    "ruff>=0.4.1",
]

[tool.pdm.scripts]
lint.cmd = "ruff check -v --fix ./src/"
lint.help = "Lint the project with Ruff."
format.cmd = "ruff format -v ./src/"
format.help = "Reformat the project with Ruff and automatically fixup violations."
mypy.cmd = "python -m mypy ./src/"
mypy.help = "Scan source code with a static type checker."
ci.composite = ["lint", "format", "mypy"]
ci.help = "Run a full CI of the project."
play.cmd = "python src/main.py"
play.help = "Launch the main application."
build.cmd = "pyinstaller --disable-windowed-traceback -y --clean -F -n {args} -w -i ./src/output.ico ./src/main.py"
build.help = "Build a single-file executable of the project."
git.cmd = "pre-commit install"
git.help = "Install pre-commit hooks into Git repository."

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["B9"]
extend-ignore = ["E203", "E501", "E701"]
